<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/signup_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="2"
            android:text="@string/get_started"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="36sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signup_footer_layout"
        android:layout_below="@+id/signup_header_layout"
        android:layout_margin="5dp"
        android:background="@drawable/edittext_normal"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/signup_firstname_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_rounded_rectangle_white"
                android:fontFamily="sans-serif-condensed" 
                android:hint="@string/firstname"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#FF434343" />

            <EditText
                android:id="@+id/signup_lastname_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_rounded_rectangle_white"
                android:fontFamily="sans-serif-condensed" 
                android:hint="@string/lastname"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#FF434343" />

            <EditText
                android:id="@+id/signup_email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_rounded_rectangle_white"
                android:fontFamily="sans-serif-condensed" 
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#FF434343" />

            <EditText
                android:id="@+id/signup_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_rounded_rectangle_white"
                android:fontFamily="sans-serif-condensed" 
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#FF434343" />

            <EditText
                android:id="@+id/signup_repassword_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_rounded_rectangle_white"
                android:fontFamily="sans-serif-condensed" 
                android:hint="@string/re_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#FF434343" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/signup_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_login_button"
                    android:drawableRight="@drawable/ic_next"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/white" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/signup_footer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/exsisting_user"
            android:textColor="@android:color/white"
            android:textSize="18sp" 
            android:fontFamily="sans-serif-light"/>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/sign_in"
            android:textColor="@drawable/selector_text_toggle"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"/>
    </LinearLayout>

</RelativeLayout>