<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="2"
            android:text="@string/welcome"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="36sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="5dp"
        android:background="@drawable/edittext_normal"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp" >

        <EditText
            android:id="@+id/signin_username_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rounded_rectangle_white"
            android:drawableRight="@drawable/ic_user"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:textColor="#FF434343" />

        <EditText
            android:id="@+id/signin_password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_rounded_rectangle_white"
            android:drawableRight="@drawable/ic_password"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:textColor="#FF434343" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/signin_login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_login_button"
                android:drawableRight="@drawable/ic_next"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/sign_in"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="5dp"
            android:text="@string/new_user"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/signup_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/sign_up"
            android:textColor="@drawable/selector_text_toggle"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>